--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Moritz Kraus",
   "license": "MIT",
   "dependencies": {
-    "mqtt": "^3.0.0"
+    "mqtt": "^3.0.0",
+    "shelljs": "^0.8.3"
   }
 }
